--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@blockly/field-date": "^9.0.12",
     "@heroicons/react": "^2.2.0",
     "blockly": "^11.2.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "heroicons": "^2.2.0",
